fix: prevent header from collapsing

--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,4 @@
 html {
-  line-height: 1.25em;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
     Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
